# any2toon

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
scripts/: run_benchmark.py
src/any2toon/: __init__.py  converters.py  core.py  toon_serializer.py
tests/: benchmark_pandas.py  benchmark_parquet_threshold.py  benchmark_polars.py  find_threshold.py  test_bson.py  test_converters.py  test_optimizations.py
